fix(docs): import breadcrumb

--- a/apps/web/src/pages/blocks/navigation-headers/navbar-2.astro
+++ b/apps/web/src/pages/blocks/navigation-headers/navbar-2.astro
@@ -9,7 +9,7 @@ import Card from "@bejamas/ui/components/Card.astro";
 import NavigationMenu from "@bejamas/ui/components/NavigationMenu.astro";
 import MenuDropdown from "@bejamas/ui/components/Dropdown.astro";
 import StickySurface from "@bejamas/ui/components/StickySurface.astro";
-import Breadcrumbs from "@bejamas/ui/components/Breadcrumbs.astro";
+import Breadcrumb from "@bejamas/ui/components/Breadcrumb.astro";
 import { SlashIcon } from "@lucide/astro";
 ---
 
