--- a/apps/web/src/pages/template-1.astro
+++ b/apps/web/src/pages/template-1.astro
@@ -8,7 +8,7 @@ import Card from "@bejamas/ui/components/Card.astro";
 import NavigationMenu from "@bejamas/ui/components/NavigationMenu.astro";
 import MenuDropdown from "@bejamas/ui/components/Dropdown.astro";
 import StickySurface from "@bejamas/ui/components/StickySurface.astro";
-import Breadcrumbs from "@bejamas/ui/components/Breadcrumbs.astro";
+import Breadcrumb from "@bejamas/ui/components/Breadcrumb.astro";
 import Marquee from "@bejamas/ui/components/Marquee.astro";
 import { SlashIcon } from "@lucide/astro";
 ---
@@ -120,7 +120,7 @@ import { SlashIcon } from "@lucide/astro";
   </section>
 
   <section class="py-5 max-w-5xl mx-auto">
-    <Breadcrumbs>
+    <Breadcrumb>
       <li><Button href="/" as="a" variant="link">Home</Button></li>
       <li><SlashIcon class="size-4" /></li>
       <li><Button href="/docs" as="a" variant="link">Docs</Button></li>
@@ -158,7 +158,7 @@ import { SlashIcon } from "@lucide/astro";
       </li>
       <li><SlashIcon class="size-4" /></li>
       <li><Button as="span" variant="link">Current Page</Button></li>
-    </Breadcrumbs>
+    </Breadcrumb>
   </section>
 
   <!-- <div class="overflow-y-auto max-h-[320px] w-full bg-border px-8  border-border">
