--- a/apps/web/src/pages/blocks/navigation-headers/navbar-1.astro
+++ b/apps/web/src/pages/blocks/navigation-headers/navbar-1.astro
@@ -4,7 +4,7 @@ import Button from "@bejamas/ui/components/Button.astro";
 import NavigationMenu from "@bejamas/ui/components/NavigationMenu.astro";
 import MenuDropdown from "@bejamas/ui/components/Dropdown.astro";
 import StickySurface from "@bejamas/ui/components/StickySurface.astro";
-import Breadcrumbs from "@bejamas/ui/components/Breadcrumbs.astro";
+import Breadcrumb from "@bejamas/ui/components/Breadcrumb.astro";
 import { SlashIcon } from "@lucide/astro";
 ---
 
