--- a/packages/ui/src/components/Button.astro
+++ b/packages/ui/src/components/Button.astro
@@ -147,7 +147,7 @@ const buttonVariants = cva(
           "bg-secondary text-secondary-foreground hover:bg-secondary/80",
         ghost:
           "hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50",
-        link: "text-accent-foreground underline-offset-4 hover:underline p-0",
+        link: "text-accent underline-offset-4 hover:underline p-0",
       },
       size: {
         default: "h-9 px-4 py-2 text-sm has-[.badge:last-child]:pr-1.5 ",
