feat(starlight-theme): add background to main pane

--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -74,6 +74,11 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     @apply h-full;
   }
 
+  .main-frame > div {
+    background-color: transparent;
+    border: 0;
+  }
+
   /* .main-frame main > .content-panel:last-child {
     background-color: var(--muted);
     border-radius: calc(var(--radius) - 2px);
