--- a/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
@@ -6,8 +6,6 @@ import { ArrowLeft, ArrowRight } from "@lucide/astro";
 const { dir, pagination, template, entry } = Astro.locals.starlightRoute;
 const { prev, next } = pagination;
 const isRtl = dir === "rtl";
-
-console.log({ entry });
 ---
 
 <div
@@ -27,7 +25,7 @@ console.log({ entry });
           <Button
             as="a"
             href={isRtl ? next.href : prev.href}
-            variant="secondary"
+            variant="outline"
             size="icon-sm"
           >
             <ArrowLeft size="1.5rem" />
@@ -37,7 +35,7 @@ console.log({ entry });
           <Button
             as="a"
             href={isRtl ? prev.href : next.href}
-            variant="secondary"
+            variant="outline"
             size="icon-sm"
           >
             <ArrowRight size="1.5rem" />
