--- a/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
@@ -1,7 +1,12 @@
 ---
 import Button from "virtual:starlight-theme-bejamas/components/Button.astro";
 import { Icon } from "@astrojs/starlight/components";
-import { ArrowLeft, ArrowRight } from "@lucide/astro";
+import {
+  ArrowLeft,
+  ArrowRight,
+  SquareArrowOutUpRight,
+  ArrowUpRight,
+} from "@lucide/astro";
 
 const { dir, pagination, template, entry } = Astro.locals.starlightRoute;
 const { prev, next } = pagination;
@@ -21,6 +26,46 @@ const isRtl = dir === "rtl";
   {
     entry.data.template !== "splash" && (
       <div class="sl-bejamas-docs-title-buttons">
+        {entry.data.figmaUrl && (
+          <Button
+            variant="outline"
+            size="sm"
+            as="a"
+            href={entry.data.figmaUrl}
+            target="_blank"
+          >
+            <svg
+              fill="none"
+              height="24"
+              viewBox="0 0 38 57"
+              width="24"
+              xmlns="http://www.w3.org/2000/svg"
+              class="text-lg"
+            >
+              <>
+                <path
+                  d="M19 28.5a9.5 9.5 0 1 1 19 0 9.5 9.5 0 0 1-19 0Z"
+                  fill="#1ABCFE"
+                />
+                <path
+                  d="M0 47.5A9.5 9.5 0 0 1 9.5 38H19v9.5a9.5 9.5 0 1 1-19 0Z"
+                  fill="#0ACF83"
+                />
+                <path d="M19 0v19h9.5a9.5 9.5 0 1 0 0-19H19Z" fill="#FF7262" />
+                <path
+                  d="M0 9.5A9.5 9.5 0 0 0 9.5 19H19V0H9.5A9.5 9.5 0 0 0 0 9.5Z"
+                  fill="#F24E1E"
+                />
+                <path
+                  d="M0 28.5A9.5 9.5 0 0 0 9.5 38H19V19H9.5A9.5 9.5 0 0 0 0 28.5Z"
+                  fill="#A259FF"
+                />
+              </>
+            </svg>
+            Figma
+            <ArrowUpRight />
+          </Button>
+        )}
         {prev && (
           <Button
             as="a"
@@ -61,6 +106,7 @@ const isRtl = dir === "rtl";
       justify-content: space-between;
       flex-wrap: wrap;
       margin-top: 0.5rem;
+      align-items: center;
     }
     .sl-bejamas-docs-title-buttons {
       display: flex;
