--- a/packages/starlight-theme-bejamas/src/overrides/Sidebar.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/Sidebar.astro
@@ -1,15 +1,34 @@
 ---
-import MobileMenuFooter from 'virtual:starlight/components/MobileMenuFooter';
-import SidebarPersister from './SidebarPersister.astro';
-import SidebarSublist from './SidebarSublist.astro';
+import MobileMenuFooter from "virtual:starlight/components/MobileMenuFooter";
+import SidebarPersister from "./SidebarPersister.astro";
+import SidebarSublist from "./SidebarSublist.astro";
 
 const { sidebar } = Astro.locals.starlightRoute;
 ---
 
-<SidebarPersister>
-	<SidebarSublist sublist={sidebar} />
-</SidebarPersister>
+<style>
+  @layer bejamas {
+    .fade {
+      --blur: 4px;
+      --stop: 50%;
+      --height: 72px;
+      position: fixed;
+      pointer-events: none;
+      width: 100%;
+      height: var(--height);
+      user-select: none;
+      -webkit-user-select: none;
+      left: 0;
+      -webkit-backdrop-filter: blur(var(--blur));
+      backdrop-filter: blur(var(--blur));
 
-<div class="md:sl-hidden">
-	<MobileMenuFooter />
-</div>
+      background: linear-gradient(to top, transparent, var(--background));
+      mask-image: linear-gradient(
+        to bottom,
+        var(--background) var(--stop),
+        transparent
+      );
+      top: 0;
+    }
+  }
+</style>
