feat(ui): small styling improvements

--- a/packages/ui/src/components/Badge.astro
+++ b/packages/ui/src/components/Badge.astro
@@ -88,7 +88,7 @@ const badgeVariants = cva(
           "text-foreground border [a&]:hover:bg-accent [a&]:hover:text-accent-foreground",
       },
       shape: {
-        default: "rounded-md",
+        default: "rounded-xs",
         pill: "rounded-full",
       },
       size: {
