--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -28,7 +28,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
   <div id="browser-hero-panel-end" class="w-full mt-[-1px] h-px bottom-0 -z-10">
   </div>
   <div
-    class="h-full fixed scroll-fade-out bg-muted top-14 border left-6 right-6 rounded-t-2xl"
+    class="h-full fixed scroll-fade-out bg-muted top-14 border left-6 right-6 rounded-t-md"
   >
   </div>
   <div
@@ -60,6 +60,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
   .main-frame {
     height: 100svh;
     padding-top: 0;
+    padding-right: 0;
   }
 
   .main-frame > .lg\:sl-flex,
