--- a/packages/starlight-theme-bejamas/src/overrides/Sidebar.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/Sidebar.astro
@@ -1,10 +1,21 @@
 ---
 import MobileMenuFooter from "virtual:starlight/components/MobileMenuFooter";
-import SidebarPersister from "./SidebarPersister.astro";
-import SidebarSublist from "./SidebarSublist.astro";
+import SidebarPersister from "virtual:starlight/components/SidebarPersister.astro";
+import SidebarSublist from "virtual:starlight/components/SidebarSublist.astro";
 
 const { sidebar } = Astro.locals.starlightRoute;
 ---
+
+ASD
+
+<SidebarPersister>
+  <div class="fade"></div>
+  <SidebarSublist sublist={sidebar} />
+</SidebarPersister>
+
+<div class="md:sl-hidden">
+  <MobileMenuFooter />
+</div>
 
 <style>
   @layer bejamas {
